hphp/hack/test/typecheck/deprecated_attr_bad.php.exp
File "deprecated_attr_bad.php", line 3, characters 16-18:
Attribute arguments must be literals (Parsing[1002])
