hphp/hack/test/typecheck/deprecated_attr_bad.php
<?hh // partial

<<__Deprecated(FOO)>>
function f() {}
